--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="jumbotron">
+  <h1>Welcome to Schange!</h1>
+  <p>The currency Exchange platform</p>
+  <%= link_to "Signup", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+</div>
